unpackaged/main/default/objects/FLAGS__FlagPref__c/FLAGS__FlagPref__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Case Flag Preferences as set by the user in the Case Flag Setup Wizard.</description>
    <label>Case Flag Preferences</label>
</CustomObject>