unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__AllowClearAfterEmail__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AllowClearAfterEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the clearing of the Case Flag after an email has been sent from the Case. 

Set in the Case Flags Setup Wizard.</description>
    <label>Allow clear after email</label>
    <type>Checkbox</type>
</CustomField>