unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__AllowWriteAfterAttachment__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AllowWriteAfterAttachment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Case Flag to automatically be set on immediately after an attachment has been added to Case by an external user. 

Set in the Case Flags Setup Wizard.</description>
    <label>Allow write after attachment</label>
    <type>Checkbox</type>
</CustomField>