unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__AllowWriteAfterComment__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AllowWriteAfterComment__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Case Flag to automatically be set on immediately after a comment has been added to Case.

Set in the Case Flags Setup Wizard.</description>
    <label>Allow write after comment</label>
    <type>Checkbox</type>
</CustomField>