unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__AllowWriteAfterEmail__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__AllowWriteAfterEmail__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Case Flag to automatically be set on immediately after an email has been received for the Case.

Set in the Case Flags Setup Wizard.</description>
    <label>Allow write after email</label>
    <type>Checkbox</type>
</CustomField>