unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Business_Hours_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Business_Hours_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of records that each batch of the business hours job will process.</description>
    <label>Business Hours Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>