unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Chatter_Triggers_Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Chatter_Triggers_Deployment_Id__c</fullName>
    <description>The Id of the deployment request used to create the Chatter Triggers.</description>
    <label>Chatter Triggers Deployment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>