unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Clear_Follow_Up_On_Close__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Clear_Follow_Up_On_Close__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatically clear follow up and next steps on case close.</description>
    <label>clear Follow Up On Close</label>
    <type>Checkbox</type>
</CustomField>