unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Clear_On_Agent_Post__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Clear_On_Agent_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear On Agent Post</label>
    <type>Checkbox</type>
</CustomField>