unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Clear_On_Agent_Reply__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Clear_On_Agent_Reply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear On Agent Reply</label>
    <type>Checkbox</type>
</CustomField>