unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__ClearOnCaseClose__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__ClearOnCaseClose__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the clearing of the Case Flag after the Case closes. 

Set in the Case Flags Setup Wizard.</description>
    <label>Clear On Case Close</label>
    <type>Checkbox</type>
</CustomField>