unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Connected_App_Name__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Connected_App_Name__c</fullName>
    <description>Unique name of connected app.</description>
    <label>Connected App Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>