unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Error_Report_Email__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Error_Report_Email__c</fullName>
    <description>The email address that will receive error emails when the batch job fails.

Set in the Case Flags Setup Wizard.</description>
    <label>Error Report Email</label>
    <type>Email</type>
</CustomField>