unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__ExamineCommentCompanyDomain__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__ExamineCommentCompanyDomain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Examine Comment for Company Domain</label>
    <type>Checkbox</type>
</CustomField>