unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Flag_Cleanup_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Flag_Cleanup_Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The number of records that each batch of the Flag Clean Up job will process.</description>
    <label>Flag Cleanup Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>