unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Follow_Up_On_Field__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Follow_Up_On_Field__c</fullName>
    <description>Follow Up On field Name</description>
    <label>Follow Up On</label>
    <length>255</length>
    <type>Text</type>
</CustomField>