unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__HistoryCleanupJobId__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__HistoryCleanupJobId__c</fullName>
    <description>Id of the History Cleanup Job.</description>
    <label>History Cleanup Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>