unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__HistoryCleanupReporting__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__HistoryCleanupReporting__c</fullName>
    <description>Avoid deleting partial data for Case Flags History Tracking records within the nearest Week or Month window.</description>
    <label>History Cleanup Reporting</label>
    <length>16</length>
    <type>Text</type>
</CustomField>