unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__HistoryTrackingMonths__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__HistoryTrackingMonths__c</fullName>
    <description>Number of months to keep Case Flags History Tracking records for.</description>
    <label>History Tracking Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>