unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Ignore_Community_User_Emails__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Ignore_Community_User_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevent the modification of a Case's flag if an outbound email is from a non-standard user.</description>
    <label>Ignore Community User Emails</label>
    <type>Checkbox</type>
</CustomField>