unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__JobId__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__JobId__c</fullName>
    <description>Id of Schedule Apex "Case Flags Job" needed for updating business hours every day.</description>
    <label>JobId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>