unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__MaintainFlagPrivateComment__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__MaintainFlagPrivateComment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is an optional setting for customers of Email to Case Premium to maintain the flag when sending a private comment to an internal email address.</description>
    <label>Maintain Flag on Private Comment (E2CP)</label>
    <type>Checkbox</type>
</CustomField>