unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Next_Steps_Field__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Next_Steps_Field__c</fullName>
    <description>Next Steps Field Name</description>
    <label>Next Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>