unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset1Description__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset1Description__c</fullName>
    <defaultValue>"Flag Level 1"</defaultValue>
    <label>Age 1 Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>