unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset2Image__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset2Image__c</fullName>
    <description>Id of image Document to be displayed in the Case Flag field after Age 2 Hours has lapsed. Set in the Case Flags Setup Wizard.</description>
    <label>Age 2 Image</label>
    <length>20</length>
    <type>Text</type>
</CustomField>