unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Offset4Hex__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Offset4Hex__c</fullName>
    <defaultValue>"e51f21"</defaultValue>
    <description>Color for flag 4</description>
    <label>Age 4 Hex</label>
    <length>30</length>
    <type>Text</type>
</CustomField>