unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Set_On_Customer_Reply__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Set_On_Customer_Reply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Set On Customer Reply</label>
    <type>Checkbox</type>
</CustomField>