unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__SetOnCaseCreate__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__SetOnCaseCreate__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable the Case Flag to automatically be set on immediately after a Case has been created.

Set in the Case Flags Setup Wizard.</description>
    <label>Set On Case Create</label>
    <type>Checkbox</type>
</CustomField>