unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Subsequent_Interactions__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Subsequent_Interactions__c</fullName>
    <description>Custom text for subsequent interactions</description>
    <label>Subsequent Interactions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>