unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__TimeOffset2__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__TimeOffset2__c</fullName>
    <defaultValue>4</defaultValue>
    <description>The amount of hours to wait before displaying Age 2 Image in the Case Flag field. Set in the Case Flags Setup Wizard.</description>
    <label>Age 2 Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>