unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Track_Case_Status__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Track_Case_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Case Status</label>
    <type>Checkbox</type>
</CustomField>