unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Track_Flag_Clear__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Track_Flag_Clear__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Flag Clear</label>
    <type>Checkbox</type>
</CustomField>