unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__UseFuture__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__UseFuture__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Move the logic to set the custom Business Hours lookup on new cases to Apex Future methods.</description>
    <label>Use Future</label>
    <type>Checkbox</type>
</CustomField>