unpackaged/main/default/objects/FLAGS__FlagPref__c/fields/FLAGS__Utility_Bar_Pinned_List_View__c.field-meta.xml
<CustomField>
    <fullName>FLAGS__Utility_Bar_Pinned_List_View__c</fullName>
    <label>Utility Bar Pinned List View</label>
    <length>255</length>
    <type>Text</type>
</CustomField>